# projects

./: Cargo.toml  ss  ss.txt
arrange_it/src/: lib.rs
banner/src/: lib.rs
bigger/src/: lib.rs
borrow/: Cargo.toml
borrow/src/: lib.rs
borrow_me_the_reference/src/: lib.rs
boxing_todo/src/: err.rs
capitalizing/src/: lib.rs
card_deck/: Cargo.toml
card_deck/src/: lib.rs
changes/src/: lib.rs
check/: Cargo.toml  a.txt
check/src/: geometrical_shapes.rs  main.rs
cipher/src/: lib.rs
circle/src/: lib.rs
collect/src/: lib.rs
copy/src/: lib.rs
does_it_fit/src/: lib.rs
doubtful/src/: lib.rs
drawing/: Cargo.toml
drawing/src/: geometrical_shapes.rs  main.rs
edit_distance/src/: lib.rs
error_types/src/: lib.rs
fibonacci2/src/: lib.rs
find_factorial/src/: lib.rs
functions/src/: main.rs
groceries/src/: lib.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hashing/src/: lib.rs
looping/src/: main.rs
loops/src/: main  main.rs
matrix_transposition/src/: lib.rs
middle_day/src/: lib.rs
name_initials/src/: lib.rs
ordinal/src/: lib.rs
ownership/src/: lib.rs
reverse_string/src/: lib.rs
simple_hash/src/: lib.rs
string_literals/src/: lib.rs
string_permutation/src/: lib.rs
temperature_conv/src/: lib.rs
testsssss/arrays/src/: lib.rs
testsssss/card_deck/src/: lib.rs
testsssss/counting_words/src/: main.rs
testsssss/matrix_multiplication/src/: main.rs
testsssss/min_and_max/src/: main.rs
testsssss/modify_letter/src/: main.rs
testsssss/reverse_it/src/: main.rs
testsssss/smallest/src/: main.rs
tic_tac_toe/src/: lib.rs
to_url/src/: lib.rs
tuples_refs/src/: lib.rs
variables/src/: main.rs
