

[package]
name = "check"
version = "0.1.0"
edition = "2024"

[dependencies]
borrow = { path = "../borrow" }
doubtful = { path = "../doubtful" }
to_url = { path = "../to_url" }
string_literals = { path = "../string_literals" }
name_initials = { path = "../name_initials" }
ownership = { path = "../ownership" }
copy = { path = "../copy" }
borrow_me_the_reference = { path = "../borrow_me_the_reference" }
tic_tac_toe = { path = "../tic_tac_toe" }
arrange_it = { path = "../arrange_it" }
changes = { path = "../changes" }
circle = { path = "../circle" }
card_deck = { path = "../card_deck" }
arrays = { path = "../arrays" }
strings = { path = "../strings" }
capitalizing = { path = "../capitalizing" }
edit_distance = { path = "../edit_distance" }
simple_hash = { path = "../simple_hash" }
bigger = { path = "../bigger" }
string_permutation = { path = "../string_permutation" }
hashing = { path = "../hashing" }   
collect = { path = "../collect" }
unwrap_or_expect = { path = "../unwrap_or_expect" }
handling = { path = "../handling" }
profanity_filter = { path = "../profanity_filter" }
question_mark = { path = "../question_mark" }
banner = { path = "../banner" }
cipher = { path = "../cipher" }
error_types = { path = "../error_types" }
chrono = "0.4.38" 
# boxing_todo = { path = "../boxing_todo" }
fmt = "0.1.0"
middle_day = { path = "../middle_day" }
does_it_fit = { path = "../does_it_fit" }
macro_calculator = { path = "../macro_calculator" }
json = "0.12.4"
serde_json = "1.0.142"
shopping_mall = { path = "../shopping_mall" }
serde = "1.0.219"
stars = { path = "../stars" }
scores = { path = "../scores" }
searching = { path = "../searching" }
ordinal = { path = "../ordinal" }

[[bin]]
name = "check"
path = "src/main.rs"
 